--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -9,6 +9,7 @@
 \usepackage{pdfpages}
 \usepackage[shortlabels]{enumitem}
 \usepackage{moresize}
+\usepackage{stmaryrd}
 \usepackage{graphicx} % Required for inserting images
 \usepackage{hyperref}
 \usepackage{listings}
@@ -38,6 +39,7 @@
 \definecolor{lightSapienza}{HTML}{e3d3d5}
 \definecolor{darkgreen}{HTML}{008000}
 \definecolor{cartaRiciclata}{HTML}{fcfcf7}
+\newcommand{\quadBrack}[1]{ \llbracket #1 \rrbracket }
 \newcommand{\redText}[1]{\color{red}#1\color{black}}
 \newcommand{\sapText}[1]{\color{sapienza}#1\color{black}}
 \newcommand{\blueText}[1]{\color{blue}#1\color{black}}
